--- a/04_itn-eval-metrics_gsheetInfo.Rmd
+++ b/04_itn-eval-metrics_gsheetInfo.Rmd
@@ -19,7 +19,7 @@ library(ggplot2)
 ### Load Collaborations Data
 
 ```{r}
-collabs <- readr::read_tsv(file.path("data", "collabs.tsv"))
+collabs <- read_tsv(file.path("data", "collabs.tsv"))
 ```
 
 ### All Collaborations
@@ -27,47 +27,51 @@ collabs <- readr::read_tsv(file.path("data", "collabs.tsv"))
 ```{r}
 nrow(collabs)
 
-collabs %>% dplyr::count(ITN_ITCR_or_external) %>% 
-  dplyr::mutate(perc = n/sum(n))
+collabs %>% count(ITN_ITCR_or_external) %>% 
+  mutate(perc = n/sum(n))
 ```
 
 ```{r}
-collabs <- collabs %>% tidyr::separate_rows("Category", sep = ", ", ) %>% 
-  dplyr::mutate(Category = trimws(Category)) %>% 
-  dplyr::filter(Category != "?")
+collabs <- collabs %>% separate_rows("Category", sep = ", ", ) %>% 
+  mutate(Category = trimws(Category)) %>% 
+  filter(Category != "?")
 
 nrow(collabs)
 ```
 
 ```{r}
-collabs %>% dplyr::count(Category) %>% 
-  ggplot2::ggplot(ggplot2::aes(y = n, x = reorder(Category,-n), fill = Category)) +
-  ggplot2::geom_bar(position = "dodge", stat = "identity") +
-  ggplot2::theme_minimal() +
-  ggplot2::theme(axis.text.x=ggplot2::element_text(angle=60, hjust=1), 
-                 strip.text.x = ggplot2::element_text(size = 6),
+collabs %>% count(Category) %>% 
+  ggplot(aes(y = n, x = reorder(Category,-n), fill = Category)) +
+  geom_bar(position = "dodge", stat = "identity") +
+  theme_minimal() +
+  theme(axis.text.x=element_text(angle=60, hjust=1), 
+                 strip.text.x = element_text(size = 6),
                  legend.position="none", 
                  plot.margin = unit(c(.75,.5,.5,.5), "cm")) + 
-  ggplot2::xlab("")
+  xlab(NULL) +
+  ylab("N") +
+  ggtitle("Collaborations with All Individuals")
+  
 
-ggplot2::ggsave(file.path("plots", "itn_collaboration_types.png"), width = 7, height = 5)
+# ggsave(file.path("plots", "itn_collaboration_types.png"), width = 7, height = 5)
 ```
 
 ### Only ITCR funded collaborations
 
 ```{r}
-collabs %>% dplyr::filter(ITN_ITCR_or_external == "ITCR") %>%
-  dplyr::count(Category) %>%
-  ggplot2::ggplot(ggplot2::aes(y =n, x=reorder(Category, -n), fill = Category )) +
-  ggplot2::geom_bar(position="dodge", stat = "identity") +
-  ggplot2::theme_minimal() +
-  ggplot2::theme(axis.text.x=ggplot2::element_text(angle=60, hjust=1), strip.text.x = ggplot2::element_text(size=6),
+collabs %>% filter(ITN_ITCR_or_external == "ITCR") %>%
+  count(Category) %>%
+  ggplot(aes(y =n, x=reorder(Category, -n), fill = Category )) +
+  geom_bar(position="dodge", stat = "identity") +
+  theme_minimal() +
+  theme(axis.text.x=element_text(angle=60, hjust=1), strip.text.x = element_text(size=6),
                  legend.position = "none",
                  plot.margin = unit(c(.75,.5,.5,.5), "cm")) +
-  ggplot2::xlab("") +
-  ggplot2::ggtitle("Collaborations with ITCR funded individuals only")
+  xlab(NULL) +
+  ylab("N") +
+  ggtitle("Collaborations with ITCR funded individuals only")
 
-ggplot2::ggsave(file.path("plots", "itn_collaboration_types_itcr_only.png"), width = 7, height = 5)
+ggsave(file.path("plots", "itn_collaboration_types_itcr_only.png"), width = 7, height = 5)
 ```
 
 ```{r}
@@ -76,7 +80,7 @@ collab_itcr_df_to_plot <- data.frame("collabType" = c("Course paragraph authorsh
 ggplot(collab_itcr_df_to_plot, aes(x=reorder(collabType, -count), y=count, fill = collabType)) +
   geom_bar(position="dodge", stat = "identity") +
   theme_minimal() +
-  theme(axis.text.x=ggplot2::element_text(angle=60, hjust=1), strip.text.x = ggplot2::element_text(size=6),
+  theme(axis.text.x=element_text(angle=60, hjust=1), strip.text.x = element_text(size=6),
                  legend.position = "none",
                  plot.margin = unit(c(.75,.5,.5,.5), "cm")) +
   xlab("") +
@@ -96,13 +100,13 @@ loqui_usage <- readr::read_tsv(file.path("data", "loqui_usage.tsv"))
 ### Unique users of Loqui
 
 ```{r}
-loqui_usage %>% count(email) %>% dplyr::pull(email) %>% length()
+loqui_usage %>% count(email) %>% pull(email) %>% length()
 ```
 
 ### Number of videos made with Loqui
 
 ```{r, message = FALSE}
-loqui_usage %>% count(email) %>% dplyr::pull(n) %>% sum()
+loqui_usage %>% count(email) %>% pull(n) %>% sum()
 ```
 
 ## Workshop Feedback Info & Data Visualizations
@@ -140,15 +144,15 @@ scores_df[which(scores_df$eightormore == TRUE),"n"]/sum(scores_df$n)
 ```{r}
 
 promoters_categories <- poll_data %>% 
-  dplyr::mutate(merged_likely_rec = 
+  mutate(merged_likely_rec = 
                   as.numeric(merged_likely_rec), 
-                promoter = dplyr::case_when(
+                promoter = case_when(
                   merged_likely_rec < 7 ~ "detractors", 
                   merged_likely_rec == 7 ~ "passives", 
                   merged_likely_rec == 8 ~ "passives", 
                   merged_likely_rec > 8 ~ "promoters", 
                   TRUE ~ NA)) %>% 
-  dplyr::count(promoter)
+  count(promoter)
 
 promoter_sums <- promoters_categories$n
 names(promoter_sums) <- promoters_categories$promoter
@@ -162,11 +166,11 @@ promoter_sums["promoters"]/sum(promoter_sums, na.rm = TRUE)- promoter_sums["detr
 
 ```{r}
 as.numeric(poll_data$merged_likely_rec) %>%
-  ggplot2::qplot(geom = "bar") +
-  ggplot2::geom_bar(fill = "#CBC3E3") +
-  ggplot2::theme_classic() +
-  ggplot2::labs(title = "How likely would you be to recommend this workshop?", y="count", x="rating")
-  ggplot2::ggsave(file.path("plots", "itn_workshop_rec.png"), width = 5, height = 3)
+  qplot(geom = "bar") +
+  geom_bar(fill = "#CBC3E3") +
+  theme_classic() +
+  labs(title = "How likely would you be to recommend this workshop?", y="count", x="rating")
+  ggsave(file.path("plots", "itn_workshop_rec.png"), width = 5, height = 3)
 ```
 
 
@@ -174,17 +178,17 @@ as.numeric(poll_data$merged_likely_rec) %>%
 
 ```{r}
   poll_data_subset <- poll_data %>%
-    dplyr::filter(how_likely_are_you_to_use_what_you_learned_in_your_daily_work %in% c("Extremely likely", "Likely", "Not very likely", "Somewhat likely", "Very likely")) #this subset to only 72 rows instead of 119
+    filter(how_likely_are_you_to_use_what_you_learned_in_your_daily_work %in% c("Extremely likely", "Likely", "Not very likely", "Somewhat likely", "Very likely")) #this subset to only 72 rows instead of 119
 
   poll_data_subset$how_likely_are_you_to_use_what_you_learned_in_your_daily_work <- factor(poll_data_subset$how_likely_are_you_to_use_what_you_learned_in_your_daily_work, levels = c("Not very likely",  "Somewhat likely", "Likely", "Very likely", "Extremely likely"))
 
-   ggplot2::ggplot(poll_data_subset, ggplot2::aes(x = how_likely_are_you_to_use_what_you_learned_in_your_daily_work)) +
-    ggplot2::geom_bar(stat = "count", fill = "#CBC3E3") +
-    ggplot2::theme_classic() +
-    ggplot2::theme(axis.text.x = ggplot2::element_text(angle = 45, hjust=1)) +
-    ggplot2::labs(title = "How likely are you to use what you learned in your daily work?") +
-    ggplot2::xlab("")
-   ggplot2::ggsave(file.path("plots", "itn_relevance.png"), width = 6, height = 4)
+   ggplot(poll_data_subset, aes(x = how_likely_are_you_to_use_what_you_learned_in_your_daily_work)) +
+    geom_bar(stat = "count", fill = "#CBC3E3") +
+    theme_classic() +
+    theme(axis.text.x = element_text(angle = 45, hjust=1)) +
+    labs(title = "How likely are you to use what you learned in your daily work?") +
+    xlab("")
+   ggsave(file.path("plots", "itn_relevance.png"), width = 6, height = 4)
 ```
 
 ### Wordclouds for Qualitative Workshop Feedback
@@ -199,9 +203,9 @@ ud_model <- udpipe::udpipe_load_model(ud_model$file_model)
 ```{r}
 results <- udpipe::udpipe_annotate(ud_model, x = poll_data$what_did_you_like_most_about_the_workshop) %>%
   as.data.frame() %>%
-  dplyr::filter(upos %in% c("NOUN", "ADJ", "ADV")) %>%
-  dplyr::mutate(lemma= tolower(lemma)) %>%
-  dplyr::count(lemma)
+  filter(upos %in% c("NOUN", "ADJ", "ADV")) %>%
+  mutate(lemma= tolower(lemma)) %>%
+  count(lemma)
 
 wordcloud::wordcloud(words = results$lemma, freq=results$n,colors = c("#98fb98", "#83D475", "#355E3B"),
           min.freq = 3, scale = c(3, .4))
@@ -212,9 +216,9 @@ wordcloud::wordcloud(words = results$lemma, freq=results$n,colors = c("#98fb98",
 ```{r}
 rec_results <- udpipe::udpipe_annotate(ud_model, x = poll_data$please_share_any_recommendations_you_have_for_improvements) %>%
   as.data.frame() %>%
-  dplyr::filter(upos %in% c("NOUN", "ADJ", "ADV")) %>%
-  dplyr::mutate(lemma= tolower(lemma)) %>%
-  dplyr::count(lemma)
+  filter(upos %in% c("NOUN", "ADJ", "ADV")) %>%
+  mutate(lemma= tolower(lemma)) %>%
+  count(lemma)
 
 wordcloud::wordcloud(words = rec_results$lemma, freq=rec_results$n,colors = c("#98fb98", "#83D475", "#355E3B"),
           min.freq = 3, scale = c(4, .4))
