--- a/02_itn-eval-metrics_plots_metricminer.Rmd
+++ b/02_itn-eval-metrics_plots_metricminer.Rmd
@@ -33,18 +33,7 @@ ga_dims <- readRDS(file.path("data","itcr_ga_dims_data.RDS"))
 ga_link_clicks <- readRDS(file.path("data","itcr_ga_link_click_data.RDS"))
 ```
 
-## Web traffic
-
-### Load Web Traffic data
-
-```{r}
-itcr_course_data <- read_tsv(file.path("data", "itcr_course_metrics.tsv")) %>% 
-  mutate(target_audience = replace_na(target_audience, "Everyone"))
-
-ga_metrics <- readRDS(file.path("data","itcr_ga_metric_data.RDS"))
-itcr_website_metrics <- read_tsv(file.path("data", "itcr_website_metrics.tsv"))
-web_traffic_overtime <- read_tsv(file.path("data", "web_traffic_overtime.tsv"))
-```
+## Collaborations
 
 ### Unique visitors to websites
 
@@ -64,21 +53,146 @@ ggplot(itcr_course_data, aes(x = reorder(website, -totalUsers),
   scale_fill_manual(values=cbPalette)
 ```
 
+### Number of videos made with Loqui
+
+```{r, message = FALSE}
+loqui_usage %>% count(email) %>% dplyr::pull(n) %>% sum()
+```
+
+## Workshop Feedback Info
+
+```{r}
+poll_data <- itcr_slido_data$`Polls-per-user` %>%
+  janitor::clean_names()
+```
+
+
+```{r}
+promoters_categories <- poll_data %>%
+  dplyr::mutate(how_likely_would_you_be_to_recommend_this_workshop =
+                  as.numeric(how_likely_would_you_be_to_recommend_this_workshop),
+                promoter = dplyr::case_when(
+                  how_likely_would_you_be_to_recommend_this_workshop < 7 ~ "detractors",
+                  how_likely_would_you_be_to_recommend_this_workshop == 7 ~ "passives",
+                  how_likely_would_you_be_to_recommend_this_workshop == 8 ~ "passives",
+                  how_likely_would_you_be_to_recommend_this_workshop > 8 ~ "promoters",
+                  TRUE ~ NA)) %>%
+  dplyr::count(promoter)
+
+#edit to include `how_likely_would_you_be_to_recommend_this_workshop_2`?
+
+promoter_sums <- promoters_categories$n
+names(promoter_sums) <- promoters_categories$promoter
+sum(promoter_sums, na.rm = TRUE)
+
+# Net Promoter Score
+promoter_sums["promoters"]/sum(promoter_sums, na.rm = TRUE)- promoter_sums["detractors"]/sum(promoter_sums, na.rm = TRUE)
+```
+
+## Data Visualizations
+
+### How likely would you be to recommend this workshop?
+
+```{r}
+as.numeric(c(poll_data$how_likely_would_you_be_to_recommend_this_workshop, poll_data$how_likely_would_you_be_to_recommend_this_workshop_2)) %>%
+  ggplot2::qplot(geom = "bar") +
+  ggplot2::geom_bar(fill = "#CBC3E3") +
+  ggplot2::theme_classic() +
+  ggplot2::labs(title = "How likely would you be to recommend this workshop?")
+  ggplot2::ggsave(file.path("plots", "itn_workshop_rec.png"), width = 4, height = 2)
+```
+
+### Workshop Relevance Feedback
+
+```{r}
+  poll_data_subset <- poll_data %>%
+    dplyr::filter(how_likely_are_you_to_use_what_you_learned_in_your_daily_work %in% c("Extremely likely", "Likely", "Not very likely", "Somewhat likely", "Very likely")) #this overwrites poll_data so it's only 72 rows instead of 119
+
+  poll_data_subset$how_likely_are_you_to_use_what_you_learned_in_your_daily_work <- factor(poll_data_subset$how_likely_are_you_to_use_what_you_learned_in_your_daily_work, levels = c("Not very likely",  "Somewhat likely", "Likely", "Very likely", "Extremely likely"))
+
+   ggplot2::ggplot(poll_data_subset, ggplot2::aes(x = how_likely_are_you_to_use_what_you_learned_in_your_daily_work)) +
+    ggplot2::geom_bar(stat = "count", fill = "#CBC3E3") +
+    ggplot2::theme_classic() +
+    ggplot2::theme(axis.text.x = ggplot2::element_text(angle = 45, hjust=1)) +
+    ggplot2::labs(title = "How likely are you to use what you learned in your daily work?") +
+    ggplot2::xlab("")
+   ggplot2::ggsave(file.path("plots", "itn_relevance.png"), width = 4, height = 2)
+```
+
+### Wordclouds for Qualitative Workshop Feedback
+
+```{r, results = 'hide'}
+ud_model <- udpipe::udpipe_download_model(language = "english")
+ud_model <- udpipe::udpipe_load_model(ud_model$file_model)
+```
+
+#### What did you like most about the workshop?
+
+```{r}
+results <- udpipe::udpipe_annotate(ud_model, x = poll_data$what_did_you_like_most_about_the_workshop) %>%
+  as.data.frame() %>%
+  dplyr::filter(upos %in% c("NOUN", "ADJ", "ADV")) %>%
+  dplyr::mutate(lemma= tolower(lemma)) %>%
+  dplyr::count(lemma)
+
+wordcloud::wordcloud(words = results$lemma, freq=results$n,colors = c("#98fb98", "#83D475", "#355E3B"),
+          min.freq = 3, scale = c(3, .4))
+```
+
+#### Please share any recommendations you have for improvements
+
+```{r}
+rec_results <- udpipe::udpipe_annotate(ud_model, x = poll_data$please_share_any_recommendations_you_have_for_improvements) %>%
+  as.data.frame() %>%
+  dplyr::filter(upos %in% c("NOUN", "ADJ", "ADV")) %>%
+  dplyr::mutate(lemma= tolower(lemma)) %>%
+  dplyr::count(lemma)
+
+wordcloud::wordcloud(words = rec_results$lemma, freq=rec_results$n,colors = c("#98fb98", "#83D475", "#355E3B"),
+          min.freq = 3, scale = c(4, .4))
+```
+
+## Get number of unique workshop attendees
+
+```{r}
+unique_emails <-
+  unique(c(itcr_slido_data$`Polls-per-user`$`Please submit your email so we can log your attendance`,
+           itcr_slido_data$`Polls-per-user`$`What's your email?`,
+           itcr_slido_data$`Polls-per-user`$`What is your email?`)
+         ) %>% data.frame() %>% filter(grepl("@", .)) #filter out entries that aren't an email address
+
+nrow(unique_emails)
+```
+
+## Unique visitors to websites
+
+```{r}
+ggplot2::ggplot(itcr_course_data, ggplot2::aes(x = reorder(website, -totalUsers), y = totalUsers, fill = target_audience)) +
+  ggplot2::geom_bar(stat = "identity") +
+  ggplot2::theme_classic() +
+  ggplot2::theme(axis.text.x = ggplot2::element_text(angle = 45, hjust=1)) +
+  ggplot2::xlab("") +
+  ggplot2::geom_text(ggplot2::aes(label = totalUsers), size = 3, vjust = - 1) +
+  ggplot2::ylim(c(0, 6000)) +
+  ggplot2::scale_fill_manual(values=cbPalette)
+  ggplot2::ggsave(file.path("plots", "itn_website_visits.png"), width = 4, height = 3)
+```
+
 ### Table of user engagement
 
 ```{r}
-user_totals <- ga_metrics %>% 
-  janitor::clean_names() %>% 
-  select(website, active_users, average_session_duration) %>% 
+user_totals <- ga_metrics %>%
+  janitor::clean_names() %>%
+  dplyr::select(website, active_users, average_session_duration) %>%
   knitr::kable(digits=2, long_table = TRUE,padding = 2) # %>%
 
 user_totals
 ```
 
 ```{r}
-user_engagement <- ga_metrics %>% 
-  janitor::clean_names() %>% 
-  select(website, screen_page_views_per_user, sessions, screen_page_views, engagement_rate) %>% 
+user_engagement <- ga_metrics %>%
+  janitor::clean_names() %>%
+  dplyr::select(website, screen_page_views_per_user, sessions, screen_page_views, engagement_rate) %>%
   knitr::kable(digits=2, long_table = TRUE, padding = 2) # %>%
 
 user_engagement
@@ -88,70 +202,61 @@ user_engagement
 READY
 ```{r}
 itcr_course_data %>% janitor::clean_names() %>%
-  select(website, screen_page_views_per_user, average_session_duration, event_count_per_user, engagement_rate, target_audience) %>%
-  tidyr::pivot_longer(!c(website, target_audience), 
-                      names_to = "metric_name", 
-                      values_to = "value") %>% 
-  filter(!(website %in% c("ITN Website", "OTTR website", "metricminer.org"))) %>%
-  ggplot(aes(x = website, y = value, fill = target_audience)) +
-  geom_bar(position = "dodge", stat = "identity") +
-  theme_minimal() +
-  labs(x = NULL,
-       y = NULL,
-       fill = "Target Audience") +
-  facet_wrap(~metric_name, scales = "free_y",
-             labeller = labeller(metric_name = c(screen_page_views_per_user = "Screen Page Views per User",
-                                                 average_session_duration = "Average Session Duration",
-                                                 event_count_per_user = "Event Count per User",
-                                                 engagement_rate = "Engagement Rate"))) + 
-  scale_fill_manual(values=cbPalette) +
-  scale_x_discrete(limits = c("Leadership in Cancer Informatics", "NIH Data Sharing", "Ethical Data Handling", "Overleaf and Latex for Scientific Articles", "AI for Decision Makers",
-                              "Reproducibility in Cancer Informatics", "Choosing Genomics Tools", "Computing for Cancer Informatics",
-                              "Documentation and Usability", "Advanced Reproducibility", "AI for Efficient Programming", "GitHub Automation for Scientists")) +
-  theme(axis.text.x=element_text(angle=60, hjust=1), 
-        strip.text.x = element_text(size = 8), 
-        plot.margin = unit(c(1.5,.5,.5,1.5), "cm"))
+  dplyr::select(website, screen_page_views_per_user, average_session_duration, event_count_per_user, engagement_rate, target_audience) %>%
+  tidyr::pivot_longer(!c(website, target_audience),
+                      names_to = "metric_name",
+                      values_to = "value") %>%
+  dplyr::filter(!(website %in% c("ITN Website", "OTTR website", "metricminer.org"))) %>%
+  ggplot2::ggplot(ggplot2::aes(x = website, y = value, fill = target_audience)) +
+  ggplot2::geom_bar(position = "dodge", stat = "identity") +
+  ggplot2::theme_minimal() +
+  ggplot2::facet_wrap(~metric_name, scales = "free_y") +
+  ggplot2::scale_fill_manual(values=cbPalette) +
+  ggplot2::scale_x_discrete(limits = c("Leadership in Cancer Informatics", "NIH Data Sharing", "Ethical Data Handling", "Overleaf and Latex for Scientific Articles", "AI for Decision Makers",
+                                                    "Reproducibility in Cancer Informatics", "Choosing Genomics Tools", "Computing for Cancer Informatics",
+                                                    "Documentation and Usability", "Advanced Reproducibility", "AI for Efficient Programming", "GitHub Automation for Scientists")) +
+  ggplot2::theme(axis.text.x=ggplot2::element_text(angle=60, hjust=1),
+                 strip.text.x = ggplot2::element_text(size = 8),
+                 plot.margin = unit(c(1.5,.5,.5,1.5), "cm"))
 
 ggsave(file.path("plots", "itn_engagement_stats_reordered.png"), width = 8, height = 6)
 ```
 
-### ITN Course and Website Traffic Overtime 
+### ITN Course and Website Traffic Overtime
 
 ```{r}
-# TODO: 'web_traffic_overtime' not found
+traffic_plot <- web_traffic_overtime %>%
+  dplyr::filter(website %in% c("ITN Website", "OTTR website", "metricminer.org")) %>%
+  dplyr::group_by(month_year) %>%
+  dplyr::count() %>%
+  ggplot2::ggplot(ggplot2::aes(y = n, x = month_year)) +
+  ggplot2::geom_bar(stat = "identity", fill = "pink") +
+  ggplot2::scale_x_date(date_labels = "%b %Y") +
+  ggplot2::ylab("Unique ITN Online Course Visitors") +
+  ggplot2::xlab("") +
+  ggplot2::theme_minimal() +
+  ggplot2::theme(axis.text.x=ggplot2::element_text(angle=60, hjust=1))
 
-traffic_plot <- web_traffic_overtime %>% 
-  filter(website %in% c("ITN Website", "OTTR website", "metricminer.org")) %>%
-  group_by(month_year) %>% 
-  count() %>% 
-  ggplot(aes(y = n, x = month_year)) + 
-  geom_bar(stat = "identity", fill = "pink") + 
-  scale_x_date(date_labels = "%b %Y") + 
-  ylab("Unique ITN Online Course Visitors") +
-  xlab("") +
-  theme_minimal() +
-  theme(axis.text.x=element_text(angle=60, hjust=1)) 
-
-ggsave(file.path("plots", "itn_course_traffic_plot.png"), width = 4, height = 3.5)
+ggplot2::ggsave(file.path("plots", "itn_course_traffic_plot.png"), width = 4, height = 3.5)
 
 traffic_plot
 ```
 
 
 ```{r}
-long_df <- itcr_course_data %>% select(c("website", 
-                                         "totalUsers",
-                                         "coursera_count", 
-                                         "leanpub_count", 
-                                         "target_audience")) %>%
+long_df <- itcr_course_data %>% dplyr::select(c("website",
+                                     "totalUsers",
+                                     "coursera_count",
+                                     "leanpub_count",
+                                     "target_audience")) %>%
   tidyr::pivot_longer(!c(website, target_audience),
-                      names_to = "modality", 
-                      values_to = "learner_count") %>%
-  filter(!(website %in% c("ITN Website", "OTTR website", "metricminer.org"))) %>%
-  mutate(modality = case_when(
-    modality == "leanpub_count" ~ "Total Leanpub Enrollments", 
+                                         names_to = "modality",
+                                         values_to = "learner_count") %>%
+  dplyr::filter(!(website %in% c("ITN Website", "OTTR website", "metricminer.org"))) %>%
+  dplyr::mutate(modality = dplyr::case_when(
+    modality == "leanpub_count" ~ "Total Leanpub Enrollments",
     modality == "coursera_count" ~ "Total Coursera Enrollments",
-    modality == "totalUsers" ~ "Website Learners", 
+    modality == "totalUsers" ~ "Website Learners",
     TRUE ~ modality
   ))
 ```
@@ -161,20 +266,19 @@ long_df <- itcr_course_data %>% select(c("website",
 
 READY
 ```{r}
-long_df %>% 
-  group_by(modality, target_audience) %>% 
-  summarize(total_learners = sum(learner_count, na.rm = TRUE)) %>%
-  ggplot(aes(x = reorder(modality, -total_learners), y = total_learners, fill = target_audience)) +
-  geom_bar(stat = "identity", na.rm = TRUE) +
-  theme_classic() +
-  theme(axis.text.x = element_text(angle = 45, hjust=1)) +
-  labs(x = NULL,
-       y = "Visitors/Enrollees",
-       fill = "Target Audience") +
-  geom_text(aes(label = total_learners), size = 3, vjust = - 1, na.rm = TRUE) + 
-  ylim(c(0, 4200)) + 
-  facet_wrap(~target_audience) + 
-  scale_fill_manual(values=cbPalette)
+long_df %>%
+  dplyr::group_by(modality, target_audience) %>%
+  dplyr::summarize(total_learners = sum(learner_count, na.rm = TRUE)) %>%
+ggplot2::ggplot(ggplot2::aes(x = reorder(modality, -total_learners), y = total_learners, fill = target_audience)) +
+  ggplot2::geom_bar(stat = "identity", na.rm = TRUE) +
+  ggplot2::theme_classic() +
+  ggplot2::theme(axis.text.x = ggplot2::element_text(angle = 45, hjust=1)) +
+  ggplot2::xlab("") +
+  ggplot2::ylab("Visitors/Enrollees") +
+  ggplot2::geom_text(ggplot2::aes(label = total_learners), size = 3, vjust = - 1, na.rm = TRUE) +
+  ggplot2::ylim(c(0, 4200)) +
+  ggplot2::facet_wrap(~target_audience) +
+  ggplot2::scale_fill_manual(values=cbPalette)
 
 ggsave(file.path("plots", "itn_total_enrollments.png"), width = 8, height = 3)
 ```
@@ -183,29 +287,28 @@ ggsave(file.path("plots", "itn_total_enrollments.png"), width = 8, height = 3)
 
 READY
 ```{r}  
-long_df %>% 
-  group_by(website, target_audience) %>% 
-  summarize(total_learners = sum(learner_count, na.rm = TRUE)) %>%
-  ggplot(aes(y = total_learners, x = reorder(website, -total_learners), fill = target_audience)) + 
-  geom_bar(stat = "identity") + 
-  labs(x = NULL, 
-       y = "Total Learners by Course",
-       fill = "Target Audience") +
-  theme_minimal() +
-  theme(axis.text.x=element_text(angle=60, hjust=1), 
-        strip.text.x = element_text(size = 8)) + 
-  geom_text(aes(label = total_learners), size = 3, vjust = - 1, na.rm = TRUE) +
-  ylim(c(0, 1800)) + 
-  scale_fill_manual(values=cbPalette)
+long_df %>%
+  dplyr::group_by(website, target_audience) %>%
+  dplyr::summarize(total_learners = sum(learner_count, na.rm = TRUE)) %>%
+ggplot2::ggplot(ggplot2::aes(y = total_learners, x = reorder(website, -total_learners), fill = target_audience)) +
+  ggplot2::geom_bar(stat = "identity") +
+  ggplot2::ylab("Total learners by course") +
+  ggplot2::theme_minimal() +
+  ggplot2::theme(axis.text.x=ggplot2::element_text(angle=60, hjust=1),
+                 strip.text.x = ggplot2::element_text(size = 8)) +
+  ggplot2::geom_text(ggplot2::aes(label = total_learners), size = 3, vjust = - 1, na.rm = TRUE) +
+  ggplot2::ylim(c(0, 1800)) +
+  ggplot2::xlab("") +
+  ggplot2::scale_fill_manual(values=cbPalette)
 
 ggsave(file.path("plots", "itn_total_learners_by_course.png"), width = 10, height = 5)
 ```
 
 ```{r}
-long_df %>% 
-  group_by(website, target_audience) %>%
-  summarize(total_learners = sum(learner_count, na.rm = TRUE)) %>%
-  arrange(-total_learners) %>% 
+long_df %>%
+  dplyr::group_by(website, target_audience) %>%
+  dplyr::summarize(total_learners = sum(learner_count, na.rm = TRUE)) %>%
+  dplyr::arrange(-total_learners) %>%
   knitr::kable()
 ```
 
@@ -220,21 +323,21 @@ publishdates <- publishdates[order(publishdates$website),]
 ```{r}
 # TODO: 'web_traffic_overtime' not found
 web_traffic_overtime %>%
-  group_by(website, month_year, target_audience) %>% 
-  count() %>% 
-  filter(!(website %in% c("ITN Website", "OTTR website", "metricminer.org"))) %>% 
-  ggplot(aes(y = n, x = month_year, fill = target_audience)) + 
-  geom_bar(stat = "identity") + 
-  scale_x_date(date_labels = "%b %Y") + 
-  ylab("Unique ITN Website Learners Overtime") +
-  theme_minimal() +
-  theme(axis.text.x=element_text(angle=60, hjust=1), 
-        strip.text.x = element_text(size = 8)) + 
-  facet_wrap(~website) + 
-  scale_fill_manual(values=cbPalette) +
-  geom_vline(data = publishdates, aes(xintercept = website_launch), linetype='dashed') +
-  geom_vline(data = publishdates, aes(xintercept = coursera_launch), linetype='dashed', colour = 'darkgrey') +
-  geom_vline(data = publishdates, aes(xintercept = leanpub_launch), linetype='dashed', colour = 'chocolate4')
+  dplyr::group_by(website, month_year, target_audience) %>%
+  dplyr::count() %>%
+  dplyr::filter(!(website %in% c("ITN Website", "OTTR website", "metricminer.org"))) %>%
+ggplot2::ggplot(ggplot2::aes(y = n, x = month_year, fill = target_audience)) +
+  ggplot2::geom_bar(stat = "identity") +
+  ggplot2::scale_x_date(date_labels = "%b %Y") +
+  ggplot2::ylab("Unique ITN Website Learners Overtime") +
+  ggplot2::theme_minimal() +
+  ggplot2::theme(axis.text.x=ggplot2::element_text(angle=60, hjust=1),
+                 strip.text.x = ggplot2::element_text(size = 8)) +
+  ggplot2::facet_wrap(~website) +
+  ggplot2::scale_fill_manual(values=cbPalette) +
+  ggplot2::geom_vline(data = publishdates, aes(xintercept = website_launch), linetype='dashed') +
+  ggplot2::geom_vline(data = publishdates, aes(xintercept = coursera_launch), linetype='dashed', colour = 'darkgrey') +
+  ggplot2::geom_vline(data = publishdates, aes(xintercept = leanpub_launch), linetype='dashed', colour = 'chocolate4')
 
 ggsave(file.path("plots", "itn_course_traffic_plot_by_course.png"), width = 10, height = 5)
 ```
@@ -242,34 +345,34 @@ ggsave(file.path("plots", "itn_course_traffic_plot_by_course.png"), width = 10, 
 ```{r}
 get_plot <- function(course_name, web_traffic_overtime, publishdates, titleOI, useylab = FALSE, usexlab = FALSE, xlimMinVal = min(web_traffic_overtime$month_year), xlimMaxVal = max(web_traffic_overtime$month_year), ylimVal = 400){
   publishdatesSubset <- publishdates[which(publishdates$website == course_name),]
-  plotOI <- web_traffic_overtime %>% 
-    group_by(website, month_year, target_audience) %>%
-    count() %>% #count number of times it is there so it's all the data?
-    filter(website == course_name) %>%
-    ggplot(aes(y = n, x = month_year, fill = target_audience)) +
-    geom_bar(stat = "identity") +
-    scale_x_date(date_labels = "%b %Y") +
-    xlab("") +
-    ylab("") +
-    labs(title = titleOI) +
-    xlim(xlimMinVal, xlimMaxVal) +
-    ylim(0, ylimVal) +
-    theme_minimal() +
-    theme(axis.text.x=element_text(angle=60, hjust=1),
-          strip.text.x = element_text(size=7), axis.title=element_text(size=9), legend.position = "bottom") +
-    scale_fill_manual(values=c("Leadership" = "#E69F02", "New to data" = "#56B4E9", "Software developers" = "#009E73")) +
+  plotOI <- web_traffic_overtime %>%
+    dplyr::group_by(website, month_year, target_audience) %>%
+    dplyr::count() %>% #count number of times it is there so it's all the data?
+    dplyr::filter(website == course_name) %>%
+    ggplot2::ggplot(ggplot2::aes(y = n, x = month_year, fill = target_audience)) +
+    ggplot2::geom_bar(stat = "identity") +
+    ggplot2::scale_x_date(date_labels = "%b %Y") +
+    ggplot2::xlab("") +
+    ggplot2::ylab("") +
+    ggplot2::labs(title = titleOI) +
+    ggplot2::xlim(xlimMinVal, xlimMaxVal) +
+    ggplot2::ylim(0, ylimVal) +
+    ggplot2::theme_minimal() +
+    ggplot2::theme(axis.text.x=ggplot2::element_text(angle=60, hjust=1),
+                   strip.text.x = ggplot2::element_text(size=7), axis.title=element_text(size=9), legend.position = "bottom") +
+    ggplot2::scale_fill_manual(values=c("Leadership" = "#E69F02", "New to data" = "#56B4E9", "Software developers" = "#009E73")) +
     geom_vline(data = publishdatesSubset, aes(xintercept = website_launch), colour = 'black', linetype='dashed') +
     geom_vline(data = publishdatesSubset, aes(xintercept = coursera_launch), colour='plum4', linetype='dotted', linewidth=1.25) +
     geom_vline(data = publishdatesSubset, aes(xintercept = leanpub_launch), colour='chocolate4', linetype='dashed')
-  
+
   if(useylab){
     plotOI <- plotOI + ylab("Unique ITN Website Learners Overtime")
   }
-  
+
   if(usexlab){
     plotOI <- plotOI + xlab("month_year")
   }
-  
+
   return (plotOI)
 }
 
@@ -317,45 +420,45 @@ ggsave(file.path("plots", "itn_course_traffic_plot_by_course_reordered.png"), pl
 ### Number of learners by how long the course has been out
 
 ```{r}
-itcr_course_data %>% 
-  filter(!(website %in% c("ITN Website", "OTTR website", "metricminer.org"))) %>%
-  ggplot(aes(x = coursera_launch, y = coursera_count, color = target_audience)) + 
-  geom_point() + 
-  theme_minimal() + 
-  scale_color_manual(values=cbPalette)
+itcr_course_data %>%
+  dplyr::filter(!(website %in% c("ITN Website", "OTTR website", "metricminer.org"))) %>%
+  ggplot2::ggplot(ggplot2::aes(x = coursera_launch, y = coursera_count, color = target_audience)) +
+  ggplot2::geom_point() +
+  ggplot2::theme_minimal() +
+  ggplot2::scale_color_manual(values=cbPalette)
 ```
 
 ```{r}
 itcr_course_data$webAndEnrollmentTotals <- itcr_course_data %>%
   select(website_count, coursera_count, leanpub_count) %>% rowSums(na.rm = TRUE)
 
-itcr_course_data %>% 
-  filter(!(website %in% c("ITN Website", "OTTR website", "metricminer.org"))) %>%
-  mutate(duration = today() - website_launch) %>%
-  ggplot(aes(x = duration, y = webAndEnrollmentTotals, color = target_audience)) + 
-  geom_point() + 
-  theme(panel.grid = element_line("black", linewidth = 0.25), panel.background = element_blank(), panel.border = element_rect("black", fill=NA, linewidth=0.5)) +
-  xlab("How long the course has been out") +
-  ylab("Bookdown Views + Coursera & Leanpub Enrollments") +
-  scale_color_manual(values=cbPalette) + 
-  ggrepel::geom_text_repel(aes(x = duration, y = webAndEnrollmentTotals, label = website), size = 4, vjust = - 1, na.rm = TRUE)
+itcr_course_data %>%
+  dplyr::filter(!(website %in% c("ITN Website", "OTTR website", "metricminer.org"))) %>%
+  dplyr::mutate(duration = today() - website_launch) %>%
+  ggplot2::ggplot(ggplot2::aes(x = duration, y = webAndEnrollmentTotals, color = target_audience)) +
+  ggplot2::geom_point() +
+  ggplot2::theme(panel.grid = element_line("black", linewidth = 0.25), panel.background = element_blank(), panel.border = element_rect("black", fill=NA, linewidth=0.5)) +
+  ggplot2::xlab("How long the course has been out") +
+  ggplot2::ylab("Bookdown Views + Coursera & Leanpub Enrollments") +
+  ggplot2::scale_color_manual(values=cbPalette) +
+  ggrepel::geom_text_repel(ggplot2::aes(x = duration, y = webAndEnrollmentTotals, label = website), size = 4, vjust = - 1, na.rm = TRUE)
 
 ggsave(file.path("plots", "itn_website_traffic_by_how_long_the_course_has_been_published.png"), width = 12, height = 8)
 ```
-### Software engagement 
+### Software engagement
 
 ```{r}
-web_traffic_overtime %>% 
-  group_by(website, month_year) %>% 
-  count() %>% 
-  filter(!(website %in% c("ITN Website", "OTTR website", "metricminer.org"))) %>%
-  ggplot(aes(y = n, x = month_year)) + 
-  geom_bar(stat = "identity", fill = "pink") + 
-  scale_x_date(date_labels = "%b %Y") + 
-  ylab("Unique ITN software website visitors") +
-  theme_minimal() +
-  theme(axis.text.x=element_text(angle=60, hjust=1), 
-        strip.text.x = element_text(size = 8)) 
+web_traffic_overtime %>%
+  dplyr::group_by(website, month_year) %>%
+  dplyr::count() %>%
+  dplyr::filter(!(website %in% c("ITN Website", "OTTR website", "metricminer.org"))) %>%
+ggplot2::ggplot(ggplot2::aes(y = n, x = month_year)) +
+  ggplot2::geom_bar(stat = "identity", fill = "pink") +
+  ggplot2::scale_x_date(date_labels = "%b %Y") +
+  ggplot2::ylab("Unique ITN software website visitors") +
+  ggplot2::theme_minimal() +
+  ggplot2::theme(axis.text.x=ggplot2::element_text(angle=60, hjust=1),
+                 strip.text.x = ggplot2::element_text(size = 8))
 
 ggsave(file.path("plots", "itn_software_website_traffic.png"), width = 10, height = 5)
 ```
@@ -364,16 +467,15 @@ ggsave(file.path("plots", "itn_software_website_traffic.png"), width = 10, heigh
 
 READY
 ```{r}
-ggplot(itcr_course_data %>% filter(coursera_count > 0), aes(x = reorder(website, -coursera_count), y = coursera_count, fill = target_audience)) +
-  geom_bar(stat = "identity", na.rm = TRUE) +
-  theme_classic() +
-  theme(axis.text.x = element_text(angle = 45, hjust=1)) +
-  labs(x = NULL,
-       y = "Coursera enrollments",
-       fill = "Target Audience") +
-  geom_text(aes(label = coursera_count), size = 3, vjust = - 1, na.rm = TRUE) +
-  ylim(c(0, 1200)) + 
-  scale_fill_manual(values=cbPalette)
+ggplot2::ggplot(itcr_course_data %>% dplyr::filter(coursera_count > 0), ggplot2::aes(x = reorder(website, -coursera_count), y = coursera_count, fill = target_audience)) +
+  ggplot2::geom_bar(stat = "identity", na.rm = TRUE) +
+  ggplot2::theme_classic() +
+  ggplot2::theme(axis.text.x = ggplot2::element_text(angle = 45, hjust=1)) +
+  ggplot2::xlab("") +
+  ggplot2::ylab("Coursera enrollments") +
+  ggplot2::geom_text(ggplot2::aes(label = coursera_count), size = 3, vjust = - 1, na.rm = TRUE) +
+  ggplot2::ylim(c(0, 1200)) +
+  ggplot2::scale_fill_manual(values=cbPalette)
 
 ggsave(file.path("plots", "itn_coursera_enrollments.png"), width = 4, height = 2)
 ```
@@ -382,21 +484,20 @@ ggsave(file.path("plots", "itn_coursera_enrollments.png"), width = 4, height = 2
 
 READY
 ```{r}
-ggplot(itcr_course_data %>% filter(leanpub_count > 0) , aes(x = reorder(website, -leanpub_count), y = leanpub_count, fill = target_audience)) +
-  geom_bar(stat = "identity", na.rm = TRUE) +
-  theme_classic() +
-  theme(axis.text.x = element_text(angle = 45, hjust=1)) +
-  labs(x = NULL,
-       y = "Leanpub enrollments",
-       fill = "Target Audience") +
-  geom_text(aes(label = leanpub_count), size = 3, vjust = - 1, na.rm = TRUE) +
-  ylim(c(0, 40)) + 
-  scale_fill_manual(values=cbPalette)
+ggplot2::ggplot(itcr_course_data %>% dplyr::filter(leanpub_count > 0) , ggplot2::aes(x = reorder(website, -leanpub_count), y = leanpub_count, fill = target_audience)) +
+  ggplot2::geom_bar(stat = "identity", na.rm = TRUE) +
+  ggplot2::theme_classic() +
+  ggplot2::theme(axis.text.x = ggplot2::element_text(angle = 45, hjust=1)) +
+  ggplot2::xlab("") +
+  ggplot2::ylab("Leanpub enrollments") +
+  ggplot2::geom_text(ggplot2::aes(label = leanpub_count), size = 3, vjust = - 1, na.rm = TRUE) +
+  ggplot2::ylim(c(0, 40)) +
+  ggplot2::scale_fill_manual(values=cbPalette)
 
 ggsave(file.path("plots", "itn_leanpub_enrollments.png"), width = 4, height = 2)
 ```
 
-### Session Info 
+### Session Info
 
 ```{r}
 sessionInfo()
